<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.ProfileLoginScreen">

    <ImageView
        android:id="@+id/view_top"
        android:layout_width="match_parent"
        android:layout_height="295dp"
        android:src="@drawable/background_top_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_title_profile"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/set_up_your_profile"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="269dp"
        android:layout_height="46dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:text="@string/description_profile"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_profile" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_profile_imagem"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginBottom="30dp"
        android:elevation="0dp"
        app:cardCornerRadius="130dp"
        app:layout_constraintBottom_toBottomOf="@id/view_top"
        app:layout_constraintLeft_toLeftOf="@id/view_top"
        app:layout_constraintRight_toRightOf="@id/view_top">

        <ImageView
            android:id="@+id/profile_imagem"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginBottom="30dp"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_acount"
            app:layout_constraintBottom_toBottomOf="@id/view_top"
            app:layout_constraintLeft_toLeftOf="@id/view_top"
            app:layout_constraintRight_toRightOf="@id/view_top" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/background_icon_camera"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="13dp"
        android:elevation="2dp"
        android:src="@drawable/icone_camera"
        app:layout_constraintBottom_toBottomOf="@id/card_profile_imagem"
        app:layout_constraintStart_toStartOf="@id/card_profile_imagem" />

    <ImageView
        android:id="@+id/icon_camera"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:elevation="2dp"
        android:src="@drawable/icon_camera"
        app:layout_constraintBottom_toBottomOf="@id/background_icon_camera"
        app:layout_constraintEnd_toEndOf="@id/background_icon_camera"
        app:layout_constraintStart_toStartOf="@id/background_icon_camera"
        app:layout_constraintTop_toTopOf="@id/background_icon_camera" />

    <TextView
        android:id="@+id/text_personal_information"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/personal_information"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/view_top"
        app:layout_constraintTop_toBottomOf="@id/view_top" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_name"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:hint="Name"
        android:textColorHint="@color/cinza_chumbo"
        app:boxStrokeColor="@color/green_olive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_personal_information">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_number"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:hint="Contact Number"
        android:textColorHint="@color/cinza_chumbo"
        app:boxStrokeColor="@color/green_olive"
        app:endIconDrawable="@drawable/icon_edit"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_birthday"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:hint="Date of Birth"
        android:textColorHint="@color/cinza_chumbo"
        app:boxStrokeColor="@color/green_olive"
        app:endIconDrawable="@drawable/icon_edit"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_day_birth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="date"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_localization"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:hint="Add Details"
        android:textColorHint="@color/cinza_chumbo"
        app:boxStrokeColor="@color/green_olive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_birthday">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_localization"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPostalAddress"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_onboarding"
        android:layout_width="295dp"
        android:layout_height="54dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_background"
        android:text="@string/cont"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="190dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/elipse_background_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <FrameLayout
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
